--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "http-errors": "^1.7.3",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.9",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "sinon": "^7.4.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
