--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^6.2.0",
-    "node-mocks-http": "^1.7.6"
+    "node-mocks-http": "^1.7.6",
+    "sinon-mongoose": "^2.3.0"
   }
 }
